[package]
name = "bevy-example-study"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
bevy = "0.16.0"

[[example]]
name = "grid"
path = "examples/ui/grid.rs"

[[example]]
name = "many_glyphs"
path = "examples/stress_tests/many_glyphs.rs"

[[example]]
name = "2d_viewport_to_world"
path = "examples/2d/2d_viewport_to_world.rs"
